--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# MySQL. Versions 5.5.8 and up are supported.
+  # MySQL. Versions 5.5.8 and up are supported.
 #
 # Install the MySQL driver
 #   gem install mysql2
@@ -14,12 +14,12 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   socket: /var/run/mysqld/mysqld.sock
-  username: daria
-  password: DariaAres123!
-  host: 0.0.0.0
 
 development:
   <<: *default
+  username: daria
+  password: DariaAres123!
+  host: localhost
   database: <%= ENV['DB_NAME'] %>
 
 # Warning: The database defined as "test" will be erased and
@@ -27,7 +27,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: root
+  password: DariaAres123!
+  host: localhost
   database: trainee_planner_test
+  host: 127.0.0.1
+  port: 8888
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -51,6 +56,7 @@ test:
 #
 production:
   <<: *default
+  host: localhost
   database: trainee_planner_production
   username: trainee_planner
   password: <%= ENV["TRAINEE_PLANNER_DATABASE_PASSWORD"] %>
