--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,8 @@ development:
 test:
   <<: *default
   database: trainee_planner_test
+  host:  localhost
+  port: 8888
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
