--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ development:
 test:
   <<: *default
   database: trainee_planner_test
-  host:  localhost
+  host: 127.0.0.1
   port: 8888
 
 # As with config/credentials.yml, you never want to store sensitive information,
