--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -11,6 +11,9 @@ env:
   MYSQL_LOG_CONSOLE: true
   MYSQL_PASSWORD: password
   MYSQL_ROOT_USER: root
+  WEATHER_API_KEY=2ef56a4cf9b6a2f3ac00b249e0c861d34a507e246e5b2d73a0c39bd7ad7f1d9e
+  LATITUDE=53.8930
+  LONGITUDE=27.5674
 
 jobs:
   Rubocop:
@@ -50,16 +53,16 @@ jobs:
           bundle exec rails db:create db:migrate RAILS_ENV=test
           bin/rails assets:precompile
           rspec spec
-          
+
   Code-coverage:
     runs-on: ubuntu-20.04
     steps:
       - name: Workflow access
         uses: actions/checkout@v3
-        
+
       - name: Build app
         uses: ./.github/actions/build
-        
+
       - name: Create Coverage Artifact
         uses: actions/upload-artifact@v2
         with:
