Add weather view

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -11,9 +11,9 @@ env:
   MYSQL_LOG_CONSOLE: true
   MYSQL_PASSWORD: password
   MYSQL_ROOT_USER: root
-  WEATHER_API_KEY=2ef56a4cf9b6a2f3ac00b249e0c861d34a507e246e5b2d73a0c39bd7ad7f1d9e
-  LATITUDE=53.8930
-  LONGITUDE=27.5674
+  WEATHER_API_KEY: 2ef56a4cf9b6a2f3ac00b249e0c861d34a507e246e5b2d73a0c39bd7ad7f1d9e
+  LATITUDE: 53.8930
+  LONGITUDE: 27.5674
 
 jobs:
   Rubocop:
